# AI-Newsletter

./: .env.template  2024-04-11.md  README.md  main.py  pyproject.toml  requirements.txt
agents/: agents.py
setup/: Llama2Modelfile  MistralModelfile
tasks/: task.py
